--- a/springboot/src/main/resources/templates/main.html
+++ b/springboot/src/main/resources/templates/main.html
@@ -2,10 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>메인화면</title>
+<title>회원목록</title>
 </head>
 <body>
-	<h1 th:text="${text}"></h1>
-	<h2>git hub 연동</h2>
+	회원목록
 </body>
 </html>
